--- a/Experiment02.ipynb
+++ b/Experiment02.ipynb
@@ -25,7 +25,7 @@
     "        self.backend = backend\n",
     "\n",
     "    def __repr__ (self):\n",
-    "        return '{}'.format (self.designation, self.frontend, self.backend)\n",
+    "        return '{} {} {}'.format (self.designation, self.frontend, self.backend)\n",
     "    \n",
     "    ### Write the your method over here.\n",
     "    def verifier(self):\n",
