--- a/Experiment01.ipynb
+++ b/Experiment01.ipynb
@@ -1,4 +1,12 @@
 {
+   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Name - Shravani Sandeep Raut"
+    "SE - 48"
+   ]
+  
  "cells": [
   {
    "cell_type": "markdown",
@@ -18,7 +26,7 @@
      "text": [
       "This is a string\n",
       "This is a string\n",
-      "This is a \n"
+      "This is a string\n"
      ]
     }
    ],
